--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
-site_name: TDAG
+site_name: Main Sequence SDK
 nav:
   - Home: index.md
   - About: about.md
-  - Tutorial: tutorial/
+  - Getting Started: getting_started/
   - Code Reference: reference/
   - Key Concepts: key_concepts/
 
@@ -12,7 +12,7 @@ edit_uri: edit/main/docs/
 
 theme:
   name: "material"
-  logo: "img/logo.svg"
+  logo: "img/logo.png"
   favicon: "img/favico.ico" # Optional: Add a favicon
   palette:
     scheme: slate  # This makes dark mode the default scheme
