--- a/Pipfile
+++ b/Pipfile
@@ -7,33 +7,45 @@ name = "pypi"
 pip-install  = "pip install psycopg2-binary && pgcopy --no-deps &&  mkdocstrings['python']" #for timeseries orm
 
 [packages]
-fire = "*"
-pandas = "*"
-pyarrow = "*"
-cloudpickle = "*"
-opentelemetry-api = "*"
-opentelemetry-sdk = "*"
-pyyaml = "*"
-joblib = "*"
-tqdm = "*"
-opentelemetry-exporter-otlp = "==1.16.0"
-ray = "*"
-numexpr = "*"
-pydantic ="*"
-cryptography = "*"
-minio = "*"
-s3fs = "*"
-fastapi = "*"
-uvicorn = "*"
-python-logstash = "*"
-structlog = "*"
-mkdocs-mermaid2-plugin = "*"
-google-auth = "*"
+alpaca-py = "*"
 ccxt = "*"
-kombu = "*"
-psutil = "*"
-python-dotenv = "*"
+cloudpickle = "*"
+cryptography = "*"
+docstring-parser = "*"
+fastapi = "*"
+fire = "*"
+google-auth = "*"
 ipywidgets = "*"
+joblib = "*"
+matplotlib = "*"
+minio = "*"
+mkdocs-mermaid2-plugin = "*"
+nbconvert = "*"
+numexpr = "*"
+opentelemetry-api = "*"
+opentelemetry-exporter-otlp = "==1.16.0"
+opentelemetry-sdk = "*"
+pandas = "*"
+pandas-market-calendars = "*"
+plotly = "*"
+psutil = "*"
+pyarrow = "*"
+pycoingecko = "*"
+pydantic = "*"
+pytest = "*"
+pytest-freezegun = "*"
+python-binance = "*"
+python-dotenv = "*"
+python-logstash = "*"
+pyyaml = "*"
+quantstats = "*"
+ray = "*"
+s3fs = "*"
+scikit-learn = "*"
+scipy = "*"
+structlog = "*"
+tqdm = "*"
+uvicorn = "*"
 
 [dev-packages]
 mkdocs = "*"
