--- a/Pipfile
+++ b/Pipfile
@@ -50,6 +50,8 @@ colorama = "*"
 fredapi = "*"
 polygon-api-client = "*"
 kaleido = "*"
+newspaper3k = "*"
+lxml-html-clean = "*"
 
 [dev-packages]
 mkdocs = "*"
