--- a/tests/configurations/market_cap_top10_tech.yaml
+++ b/tests/configurations/market_cap_top10_tech.yaml
@@ -9,7 +9,7 @@ portfolio_build_configuration:
       intraday_bar_interpolation_rule: ffill
       markets_time_series:
         - unique_identifier: alpaca_1d_bars
-    assets_category_unique_id: test_alpaca
+    assets_category_unique_id: magnificent_7_alpaca
   execution_configuration:
     commission_fee: 0.00018
   portfolio_prices_frequency: 1d
@@ -17,17 +17,21 @@ portfolio_build_configuration:
     signal_weights_name: MarketCap
     rebalance_strategy_name: ImmediateSignal
     signal_weights_configuration:
-      num_top_assets:
-      source_frequency: 1d
+      historical_market_cap_ts_unique_identifier: polygon_historical_markecap
+      num_top_assets: None
+      minimum_atvr_ratio: .05
+      rolling_atv_volume_windows: [ 90, 365 ]
+      frequency_trading_percent: .9
+      min_number_of_assets: 3
       signal_assets_configuration:
-        price_type: vwap
+        assets_category_unique_id: magnificent_7_alpaca
+        price_type: close
         prices_configuration:
           bar_frequency_id: 1d
-          upsample_frequency_id: 1d
           intraday_bar_interpolation_rule: ffill
+          upsample_frequency_id: 1d
           markets_time_series:
-            - unique_identifier: polygon_historical_markecap
-        assets_category_unique_id: test_alpaca
+            - unique_identifier: PRICES_ID
     rebalance_strategy_configuration:
       calendar: 24/7
       rebalance_end: '23:00'
@@ -37,7 +41,8 @@ portfolio_build_configuration:
       rebalance_frequency_strategy: daily
 portfolio_markets_configuration:
   portfolio_name: Magnificent 7 Market Cap Portfolio
-  front_end_details: ''
+  front_end_details:
+    description: "This is about this portfolios"
   builds_from_target_positions: false
   tracking_funds_expected_exposure_from_latest_holdings: false
   follow_account_rebalance: false
