--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,14 @@
 site_name: Main Sequence SDK
 nav:
   - Home: index.md
+  - Examples: examples/index.md
   - TDAG:
       - Getting Started: tdag/getting_started.md
       - Time Series Data Pipelines Fundamentals: tdag/time_series_fundamentals.md
       - Orchestration & Monitoring: tdag/orchestration_and_monitoring.md
   - About: about.md
-  - Getting Started: getting_started/
-  - Code Reference: reference/
-  - Key Concepts: key_concepts/
+  - Reference: reference/
+
 
 
 repo_url: https://github.com/mainsequence-sdk/mainsequence-sdk
