--- a/examples/configurations/market_cap_crypto_vol_control.yaml
+++ b/examples/configurations/market_cap_crypto_vol_control.yaml
@@ -2,7 +2,7 @@ portfolio_build_configuration:
   valuation_asset:
     unique_identifier: USD_ms_share_class_Yc5KyX6Vh0Eq
   assets_configuration:
-    price_type: vwap
+    price_type: close
     prices_configuration:
       bar_frequency_id: 1d
       upsample_frequency_id: 1d
