--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,7 @@ opentelemetry-exporter-otlp = "==1.16.0"
 opentelemetry-sdk = "*"
 pandas = "*"
 pandas-market-calendars = "*"
-plotly = "*"
+plotly = "==5.15.0"
 psutil = "*"
 pyarrow = "*"
 pycoingecko = "*"
