--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,6 @@ opentelemetry-exporter-otlp = "==1.16.0"
 opentelemetry-sdk = "*"
 pandas = "*"
 pandas-market-calendars = "*"
-plotly = "==5.15.0"
 psutil = "*"
 pyarrow = "*"
 pycoingecko = "*"
@@ -54,6 +53,7 @@ lxml-html-clean = "*"
 docstring-parser = "*"
 concurrent-log-handler = "*"
 duckdb = "*"
+plotly = "*"
 
 [dev-packages]
 mkdocs = "*"
