--- a/examples/configurations/market_cap.yaml
+++ b/examples/configurations/market_cap.yaml
@@ -1,6 +1,6 @@
 portfolio_build_configuration:
   valuation_asset:
-    unique_identifier: USD_ms_share_class_Yc5KyX6Vh0Eq
+    unique_identifier: BBG0013HGBT3
   assets_configuration:
     price_type: vwap
     prices_configuration:
