fix: update crypto portfolio

--- a/examples/configurations/market_cap_crypto.yaml
+++ b/examples/configurations/market_cap_crypto.yaml
@@ -1,11 +1,10 @@
 portfolio_build_configuration:
-  valuation_asset:
-    unique_identifier: USD_ms_share_class_Yc5KyX6Vh0Eq
   assets_configuration:
     price_type: close
     prices_configuration:
       bar_frequency_id: 1d
       upsample_frequency_id: 1d
+      translation_table_unique_id: prices_translation_table_1d
       intraday_bar_interpolation_rule: ffill
     assets_category_unique_id: top_10_crypto_market_cap
   execution_configuration:
@@ -15,27 +14,32 @@ portfolio_build_configuration:
     signal_weights_name: MarketCap
     rebalance_strategy_name: ImmediateSignal
     signal_weights_configuration:
-      num_top_assets: None
-      minimum_atvr_ratio: .05
-      rolling_atv_volume_windows: [ 90, 365 ]
-      frequency_trading_percent: .9
+      num_top_assets: 10
+      source_frequency: 1d
+      minimum_atvr_ratio: 0.1
       min_number_of_assets: 3
-      volatility_control_configuration: None
+      frequency_trading_percent: 0.9
+      rolling_atvr_volume_windows:
+        - 60
+        - 360
       signal_assets_configuration:
-        assets_category_unique_id: top_10_crypto_market_cap
         price_type: close
         prices_configuration:
           bar_frequency_id: 1d
-          intraday_bar_interpolation_rule: ffill
           upsample_frequency_id: 1d
+          translation_table_unique_id: prices_translation_table_1d
+          intraday_bar_interpolation_rule: ffill
+        assets_category_unique_id: top_10_crypto_market_cap
+      volatility_control_configuration: None
     rebalance_strategy_configuration:
       calendar: 24/7
-      rebalance_end: '23:00'
-      total_notional: 50000000
-      rebalance_start: '9:00'
-      max_percent_volume_in_bar: 0.01
-      rebalance_frequency_strategy: daily
 portfolio_markets_configuration:
-  portfolio_name: Top 10 Crypto Market Cap
+  portfolio_name: Top 10 Crypto MarketCap Portfolio
   front_end_details:
-    description: "This is about this portfolios"
+    description: >-
+      A portfolio using the MarketCap strategy for the top 10 cryptocurrency
+      assets.
+    signal_name: 'null'
+    signal_description: 'null'
+    rebalance_strategy_name: 'null'
+    rebalance_strategy_description: 'null'
