--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,32 +4,40 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mainsequence"
-version = "2.0.0"
+version = "2.0.1"
 description = "Main Sequence SDK"
 readme = "README.md"
 requires-python = ">=3.10"
 authors = [{ name = "Main Sequence GmbH", email = "dev@main-sequence.io" }]
+license = { file = "LICENSE" }
+classifiers = [
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+]
+
 # PEP 621 dependencies (published requirements)
+
 dependencies = [
   "cloudpickle", "cryptography", "fire", "google-auth", "joblib", "matplotlib", "nbconvert", "numexpr",
   "opentelemetry-api", "opentelemetry-exporter-otlp", "opentelemetry-sdk", "pandas", "pandas-market-calendars",
-  "psutil", "pyarrow", "pydantic", "pytest", "pytest-freezegun", "python-binance", "python-dotenv", "python-logstash",
-  "pyyaml", "s3fs", "scikit-learn", "scipy", "structlog", "tqdm", "colorama", "kaleido", "newspaper3k", "lxml-html-clean",
-  "docstring-parser", "concurrent-log-handler", "duckdb", "plotly", "twine", "typer", "quantlib",
+  "psutil", "pyarrow", "pydantic", "python-binance", "python-dotenv", "python-logstash",
+  "pyyaml", "s3fs", "scikit-learn", "scipy", "structlog", "tqdm", "colorama", "kaleido", "newspaper3k",
+  "lxml-html-clean", "docstring-parser", "concurrent-log-handler", "duckdb", "plotly", "typer",
+  "QuantLib",  # ← renamed from `quantlib`
 ]
 
-# PEP 735 dependency groups (local-only, not published)
+[project.urls]
+Homepage = "https://github.com/mainsequence-sdk/mainsequence-sdk"
+Issues = "https://github.com/mainsequence-sdk/mainsequence-sdk/issues"
+
+# PEP 621 dependencies (published requirements)
 [dependency-groups]
 dev = [
-  "mkdocs",
-  "mkdocs-material",
-  "mkdocs-gen-files",
-  "mkdocs-literate-nav",
-  "mkdocs-autorefs",
-  "mkdocstrings[python]",
-  "mkdocs-mermaid2-plugin",
-  "pymdown-extensions",
-  "pipdeptree"
+  "mkdocs", "mkdocs-material", "mkdocs-gen-files", "mkdocs-literate-nav", "mkdocs-autorefs",
+  "mkdocstrings[python]", "mkdocs-mermaid2-plugin", "pymdown-extensions", "pipdeptree",
+  "pytest", "pytest-freezegun", "twine"
 ]
 
 # Package discovery equivalent to find_packages(include=['mainsequence','mainsequence.*'])
@@ -40,3 +48,9 @@ include = ["mainsequence", "mainsequence.*"]
 [tool.setuptools.package-data]
 "mainsequence" = ["**/*.html", "**/*.css", "**/*.png", "**/*.toml"]
 "mainsequence.dashboards.streamlit" = ["assets/*.png", "assets/config.toml"]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
