--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mainsequence"
-version = "2.0.1"
+version = "2.0.2"
 description = "Main Sequence SDK"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -37,7 +37,7 @@ Issues = "https://github.com/mainsequence-sdk/mainsequence-sdk/issues"
 dev = [
   "mkdocs", "mkdocs-material", "mkdocs-gen-files", "mkdocs-literate-nav", "mkdocs-autorefs",
   "mkdocstrings[python]", "mkdocs-mermaid2-plugin", "pymdown-extensions", "pipdeptree",
-  "pytest", "pytest-freezegun", "twine"
+  "pytest", "pytest-freezegun", "twine", "streamlit"
 ]
 
 # Package discovery equivalent to find_packages(include=['mainsequence','mainsequence.*'])
