--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,3 +1,4 @@
+#publish-to-pypi.yml
 # This is a GitHub Actions workflow file that automates the process of
 # building and publishing your Python package to PyPI.
 # It is triggered automatically whenever you push a new git tag to your repository.
