--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -17,12 +17,13 @@ jobs:
   deploy:
     # This job runs on the latest version of Ubuntu provided by GitHub.
     runs-on: ubuntu-latest
+    environment: pypi
     # This section is CRITICAL for trusted publishing.
     # It grants the necessary permission for the workflow to request an
     # OIDC token from GitHub, which PyPI will then verify.
     permissions:
       id-token: write # This is required for trusted publishing
-
+      contents: read           # recommended
     # These are the individual steps the workflow will execute in order.
     steps:
       # Step 1: Check out the repository's code
