--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,32 +2,31 @@ name: Deploy MkDocs Documentation
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
-  deploy:
+  deploy-docs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # --- START OF THE FIX ---
-      # Instead of using a requirements.txt file, we install the
-      # documentation-specific packages directly here.
       - name: Install MkDocs and plugins
         run: |
           pip install \
@@ -36,20 +35,14 @@ jobs:
             mkdocs-literate-nav \
             mkdocs-autorefs \
             mkdocs-mermaid2-plugin \
-            mkdocstrings[python]
-      # --- END OF THE FIX ---
+            'mkdocstrings[python]'
 
       - name: Build MkDocs site
         run: mkdocs build
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - uses: actions/configure-pages@v4
+      - uses: actions/upload-pages-artifact@v3
         with:
-          path: './site'
-
-      - name: Deploy to GitHub Pages
-        id: deployment
+          path: ./site
+      - id: deployment
         uses: actions/deploy-pages@v4
