--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           python-version: '3.10'
 
+
       - name: Install MkDocs and plugins
         run: |
           pip install \
@@ -43,6 +44,8 @@ jobs:
         run: mkdocs build
 
       - uses: actions/configure-pages@v4
+        with:
+          enablement: true
 
       - uses: actions/upload-pages-artifact@v3
         with:
