--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mainsequence"
-version = "3.0.1"
+version = "3.0.1a"
 description = "Main Sequence SDK"
 readme = "README.md"
 requires-python = ">=3.10"
